agregando pagina novedades completa y retocando detalles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Encontrá la mayor variedad de marcas y productos de Suplementos Deportivos. Contamos con Aminoácidos, Creatina, esteroides y otros suplementos.">
+    <meta name="keywords" content="suplementacion deportiva proteina quimica aminoacidos creatina quemadores anabolicos argentina entrenamiento rutina">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital@1&display=swap" rel="stylesheet">
@@ -19,44 +21,44 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilo.css">
-    <title>Document</title>
+    <title>Los mejores suplementos, anabólicos y asesoría deportiva de Argentina</title>
 </head>
 <body class="contenedor">
     <header class="header">
-        <img src="../assets/img/tigre_logo.png.png" alt="" class="logo">
+        <a href="index.html"><img src="assets/img/tigre_logo.png.png" alt="logo" class="logo"></a>
         <ul class="box_nav">
-            <li><a href="">HOME</a></li>
-            <li><a href="">PRODUCTOS</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="#seccion_suplementos">PRODUCTOS</a></li>
             <li><a href="#seccion_nosotros">NOSOTROS</a></li>
             <li><a href="#seccion_contacto">CONTACTO</a></li>
         </ul>
     </header>
     <main class="banerBox">
         <h1>LIBERÁ TU BESTIA INTERIOR</h1>
-        <h2>Descubri tu potencial fisíco con nuestros productos.</h2>
-        <a href="#seccion_novedades"><img src="https://icongr.am/octicons/chevron-down.svg?size=10&color=ffffff" alt="" class="icono"></a>
+        <h2>Descubrí tu potencial físico con nuestros productos.</h2>
+        <a href="#seccion_novedades"><img src="https://icongr.am/octicons/chevron-down.svg?size=10&color=ffffff" alt="img_pesas" class="icono"></a>
     </main>
     <div class="novedades" id="seccion_novedades">
         <h3>NOVEDADES</h3>
-        <H4><a href="">Ver ahora</a></H4>
+        <h4><a href="views/novedades.html">Ver ahora</a></h4>
     </div>
     <div class="boxImg_novedades"></div>
-    <div class="boxSuplementos">
-        <figcaption>SUPLEMENTACION DEPORTIVA</figcaption>
+    <div class="boxSuplementos" id="seccion_suplementos">
+        <figcaption><a href="views/suplementos.html">SUPLEMENTACIÓN DEPORTIVA</a></figcaption>
     </div>
     <div class="boxQuimica">
-        <figcaption>ANABOLICOS ANDROGENICOS</figcaption>
+        <figcaption><a href="views/anabolicos.html">ANABÓLICOS ANDROGÉNICOS</a></figcaption>
     </div>
     <div class="boxPersonalizados">
-        <figcaption>ENTRENAMIENTOS PERSONALIZADOS</figcaption>
+        <figcaption><a href="index.html">ENTRENAMIENTOS PERSONALIZADOS</a></figcaption>
     </div>
     <div class="boxOfertas">
         <h2>AHORA EN OFERTA</h2>
         <h3>Hasta 30% off</h3>
         <div class="box_img_nov">
-            <img src="../assets/img/creatina_htn.webp" alt="" class="wheyImg img_hover">
-            <img src="../assets/img/universal.png" alt=""  class="wheyImg img_hover">
-            <img src="../assets/img/whey.png" alt=""  class="wheyImg img_hover">
+            <img src="assets/img/creatina_htn.webp" alt="creatina_img" class="wheyImg img_hover">
+            <img src="assets/img/universal.png" alt="universal_img"  class="wheyImg img_hover">
+            <img src="assets/img/whey.png" alt="whey_img"  class="wheyImg img_hover">
         </div>
         <div class="box_texto_ofertas">
             <h4 class="texto_ofertas creatina_pos">Creatina HTN</h4>
@@ -67,16 +69,16 @@
     <div class="boxNosotros" id="seccion_nosotros">
         <h2 class="titutlo_nosotros">NOSOTROS</h2>
         <p class="texto_nosotros">
-            Somos una empresa dedicada pura y exclusivamente a comercializar suplementos de alta calidad para mejorar el rendimiento de nuestros atletas.
-            Trabajamos con marcas lideres e importadas, tambien contamos con los mejores productos del mercado nacional.
-            Somos patrocinadores de varios campeones del fisicoculturismo latinoamericano y contamos tambien con un servicio de entrenamiento personalizado para que puedas sacarle el maximo provecho a tus entrenamientos, orientandote en dietas, suplementacion, etc.
+            Somos una empresa dedicada a comercializar suplementos de alta calidad para mejorar el rendimiento de nuestros atletas y distribuidores oficiales de equipamiento deportivo.
+            Trabajamos con marcas líderes e importadas, también contamos con los mejores productos del mercado nacional.
+            Somos patrocinadores de varios campeones del fisicoculturismo latinoamericano y contamos también con un servicio de entrenamiento personalizado para que puedas sacarle el máximo provecho a tus entrenamientos, orientándote en dietas, suplementación, etc.
         </p>
     </div>
     <div class="imgNosotros"></div>
     <div class="boxContacto" id="seccion_contacto">
         <div class="box_textos_contacto">
             <h2 class="text_contacto">CONTACTO</h2>
-            <h3 class="text_contacto2">Si tenes alguna duda, problema con algun producto, si queres consultar precios al por mayor, o cualquier otra cosa, contactate con nosotros!</h3>
+            <h3 class="text_contacto2">Si tenés alguna duda, problema con algún producto, si querés consultar precios al por mayor, o cualquier otra cosa, contactate con nosotros!</h3>
             <h3 class="text_contacto3">info@suplementosB.com</h3>
             <h3 class="text_contacto4"> tel: 914 152 677</h3>
         </div>
@@ -92,9 +94,9 @@
     </div>
     <div class="boxComunidad">
         <h2 class="titulo_comunidad">UNITE A NUESTRA COMUNIDAD </h2>
-        <h3 class="subtitulo_comunidad">y no te pierdas nuestros increibles beneficios.</h3>
+        <h3 class="subtitulo_comunidad">y no te pierdas nuestros increíbles beneficios.</h3>
         <form action="#" class="form_comunidad">
-            <input type="text" name="Ingresa tu Email aquí*" placeholder="Ingresa tu Email aquí*" class="mail_comunidad">
+            <input type="text" name="Ingresa tu Email aquí*" placeholder="Ingresá tu Email aquí*" class="mail_comunidad">
             <input type="submit" value="Unirse" class="unirse_comunidad">
         </form>
     </div>
